--- a/OmniMarket.Application/OmniMarket.Application.csproj
+++ b/OmniMarket.Application/OmniMarket.Application.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\OmniMarket.Domain\OmniMarket.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="DTOs\Common\" />
   </ItemGroup>
 
 </Project>
