some changes in folders

--- a/OmniMarket.Application/OmniMarket.Application.csproj
+++ b/OmniMarket.Application/OmniMarket.Application.csproj
@@ -16,8 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Features\Product\Handlers\Commands\" />
-    <Folder Include="Features\Product\Requests\Commands\" />
+    <Folder Include="Features\Product\Commands\" />
   </ItemGroup>
 
 </Project>
