--- a/OmniMarket.Persistence/OmniMarket.Persistence.csproj
+++ b/OmniMarket.Persistence/OmniMarket.Persistence.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\OmniMarket.Application\OmniMarket.Application.csproj" />
+    <ProjectReference Include="..\OmniMarket.Domain\OmniMarket.Domain.csproj" />
   </ItemGroup>
 
 </Project>
