complete infrastructure layer

--- a/OmniMarket.Infrastructure/OmniMarket.Infrastructure.csproj
+++ b/OmniMarket.Infrastructure/OmniMarket.Infrastructure.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\OmniMarket.Application\OmniMarket.Application.csproj" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.2" />
+  </ItemGroup>
+
 </Project>
