--- a/OmniMarket.UI/OmniMarket.UI.csproj
+++ b/OmniMarket.UI/OmniMarket.UI.csproj
@@ -8,5 +8,6 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
 </Project>
