--- a/OmniMarket.UI/OmniMarket.UI.csproj
+++ b/OmniMarket.UI/OmniMarket.UI.csproj
@@ -12,4 +12,8 @@
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.2" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\OmniMarket.Application\OmniMarket.Application.csproj" />
+	</ItemGroup>
 </Project>
