--- a/OmniMarket.Identity/OmniMarket.Identity.csproj
+++ b/OmniMarket.Identity/OmniMarket.Identity.csproj
@@ -8,7 +8,6 @@
 
   <ItemGroup>
     <Folder Include="Migrations\" />
-    <Folder Include="Services\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +21,10 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OmniMarket.Application\OmniMarket.Application.csproj" />
   </ItemGroup>
 
 </Project>
