--- a/OmniMarket.Api/appsettings.json
+++ b/OmniMarket.Api/appsettings.json
@@ -1,5 +1,7 @@
 {
+
   "ConnectionStrings": {
+    "OmniMarketIdentityConnectionString": "Server=.;Database=OmniMarket_Identity;Trusted_Connection=True;TrustServerCertificate=True;",
     "OmniMarketConnectionString": "Server=.;Database=OmniMarket;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
@@ -8,5 +10,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtSettings": {
+    "Key": "MySuperSecretKeyForOmniMarketJwt1234567890",
+    "Issuer": "OmniMarket",
+    "Audience": "OmniMarketUser",
+    "DurationInMinutes": 60
+  }
 }
