--- a/OmniMarket.Admin/OmniMarket.Admin.csproj
+++ b/OmniMarket.Admin/OmniMarket.Admin.csproj
@@ -10,6 +10,12 @@
     <None Include="Views\Shared\_footer.cshtml" />
     <None Include="Views\Shared\_settings-panel.cshtml" />
     <None Include="Views\Shared\_sidebar.cshtml" />
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="LocalStorage" Version="2.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="9.0.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.6.0" />
   </ItemGroup>
 
   <ItemGroup>
