--- a/OmniMarket.Application/OmniMarket.Application.csproj
+++ b/OmniMarket.Application/OmniMarket.Application.csproj
@@ -17,4 +17,8 @@
     <ProjectReference Include="..\OmniMarket.Domain\OmniMarket.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\User\Validators\" />
+  </ItemGroup>
+
 </Project>
