--- a/OmniMarket.Persistence/OmniMarket.Persistence.csproj
+++ b/OmniMarket.Persistence/OmniMarket.Persistence.csproj
@@ -25,4 +25,8 @@
     <ProjectReference Include="..\OmniMarket.Domain\OmniMarket.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
