--- a/OmniMarket.Api/appsettings.json
+++ b/OmniMarket.Api/appsettings.json
@@ -13,8 +13,9 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "Key": "MySuperSecretKeyForOmniMarketJwt1234567890",
-    "Issuer": "OmniMarket",
-    "Audience": "OmniMarketUser",
-    "DurationInMinutes": 60
+    "Issuer": "OmniMarketAPI",
+    "Audience": "OmniMarketClient",
+    "AccessTokenExpirationMinutes": 30,
+    "RefreshTokenExpirationDays": 7
   }
 }
