--- a/OmniMarket.Admin/OmniMarket.Admin.csproj
+++ b/OmniMarket.Admin/OmniMarket.Admin.csproj
@@ -19,8 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\OmniMarket.Application\OmniMarket.Application.csproj" />
-    <ProjectReference Include="..\OmniMarket.Infrastructure\OmniMarket.Infrastructure.Common.csproj" />
+    <ProjectReference Include="..\OmniMarket.Common.Dtos\OmniMarket.Common.Dtos.csproj" />
   </ItemGroup>
 
 </Project>
