--- a/OmniMarket.Application/OmniMarket.Application.csproj
+++ b/OmniMarket.Application/OmniMarket.Application.csproj
@@ -14,11 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\OmniMarket.Common.Dtos\OmniMarket.Common.Dtos.csproj" />
     <ProjectReference Include="..\OmniMarket.Domain\OmniMarket.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="DTOs\User\Validators\" />
   </ItemGroup>
 
 </Project>
